Bug 612830 - make HTML document accessible work even when there's no body, r=tbsaunde